タイトルつける

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="comment_watcher.js"></script>
     <script src="reddit_speak.js"></script>
 
+    <title>Reddit サブレ新着 読み上げ垂れ流し</title>
+    
     <style>
       body { font-size:12pt; line-height:150% }
       #start-button, #stop-button {font-size:16pt; width:200pt, height:40pt;}
