スタイル修正、resumeしわすれ修正

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Reddit サブレ新着 読み上げ垂れ流し</title>
     
     <style>
-      body { font-size:12pt; line-height:150% }
+      body { font-size:12pt; }
       #start-button, #stop-button {font-size:16pt; width:200pt, height:40pt;}
       #message {border-style:solid; border-width:1px; background-color:#dddddd;padding:1em}
     </style>
