uiの説明をツールチップにした

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       新着投稿/コメントが来ると読み上げます。コメントが多いと間引かれます。
     </p>
     
-    <p>/r/<input id="subreddit" value="newsokur"></p> 合成できます 例:newsokur+lowlevelaware
+    <p>/r/<input id="subreddit" value="newsokur" title="合成できます。例:newsokur+lowlevelaware"></p>
     
     <form id="form">
       <p>
