--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       #message {border-style:solid; border-width:1px; background-color:#dddddd;padding:1em}
       h1{font-size:16pt;}
       input{font-size:16pt;}
+      .tip {font-size:16pt;}
     </style>
 
     <link rel="stylesheet" type="text/css" href="microtip.min.css">
@@ -30,7 +31,7 @@
       新着投稿/コメントが来ると読み上げます。コメントが多いと間引かれます。
     </p>
     
-    <p>/r/<input id="subreddit" value="newsokur" > <span aria-label="合成できます。例:newsokur+lowlevelaware" data-microtip-position="bottom-left" role="tooltip">💡</span></p>
+    <p>/r/<input id="subreddit" value="newsokur" > <span class="tip" aria-label="合成できます。例:newsokur+lowlevelaware" data-microtip-position="bottom-left" role="tooltip">💡</span></p>
     
     <form id="form">
       <p>
