ページのテキスト修正

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="comment_watcher.js"></script>
     <script src="reddit_speak.js"></script>
 
-    <title>Reddit 新着コメント読み上げ 聞き流し</title>
+    <title>Reddit 新着コメント読み上げ 聞き流し用</title>
     
     <style>
       body { font-size:12pt; }
