さらにテキスト修正

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <body onload="load()">
-    <h1>Reddit 新着コメント読み上げ 聞き流し</h1>
+    <h1>Reddit 新着コメント読み上げ 聞き流し用</h1>
     <p>
       新着コメント、投稿のタイトルを読み上げていきます。追い付かないと間引かれます。(<a href="details.html">詳しく</a>)
     </p>
