詳細の説明文追加

--- a/details.html
+++ b/details.html
@@ -19,8 +19,8 @@
     <p>iOSでは、マナーモードを解除しないとブラウザからの音声合成が使えない場合があるらしいです。</p>
     
     <h2>サブレディット名の指定</h2>
-    <p> +記号による合成表記が利用できます。例: newsokur+lowlevelaware </p>
-
+    <p>+記号による合成表記が利用できます。例: newsokur+lowlevelaware </p>
+    <p>今のところ裏技的ですが、"../ユーザー名/m/multi" のように書くとマルチレディットも指定できます</p>
 
     <a href="./">戻る</a>
   </body>
